--- a/readme
+++ b/readme
@@ -11,3 +11,8 @@ Will update SQL Query with timesheet table and will include an insert of Admin i
 Admin is NOT an employee in the system, just a user.
 
 I know I have some Php on my network somewhere, I also know there may be a user authentication class out there, hopefully I can find it and implement it here.
+
+5/15/2013
+Nope, no Php on my network.
+
+Made some minor updates today. Added php helpers to the project. Just realized I never added an .htaccess will do that really quick.
